Add TFLint with .tflint.hcl config: resolve HTTP 404 by skipping --init

--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -60,13 +60,9 @@ jobs:
         with:
           tflint_version: ${{ env.TFLINT_VERSION }}
 
-      - name: Initialize TFLint
-        working-directory: ${{ matrix.terraform-examples }}
-        run: tflint --init
-
       - name: Run TFLint
         working-directory: ${{ matrix.terraform-examples }}
-        run: tflint --format compact
+        run: tflint --config ${{ github.workspace }}/.tflint.hcl --format compact
 
   # Stage 2: Security Scanning
   security:
