--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -83,6 +83,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: ${{ env.TF_VERSION }}
+
       - name: Run Trivy Vulnerability Scanner
         uses: aquasecurity/trivy-action@master
         with:
@@ -92,25 +97,32 @@ jobs:
           output: 'trivy-results.sarif'
 
       - name: Upload Trivy Results
-        uses: github/codeql-action/upload-sarif@v2
+        uses: github/codeql-action/upload-sarif@v4
         if: always()
         with:
           sarif_file: 'trivy-results.sarif'
+          category: 'Trivy'
+
+      - name: Create Reports Directory
+        run: mkdir -p reports
 
       - name: Run Checkov
         uses: bridgecrewio/checkov-action@master
         with:
           directory: .
-          framework: terraform
+          framework: terraform,secrets
+          quiet: false
+          soft_fail: true
           output_format: sarif
-          output_file_path: reports/checkov.sarif
+          output_file_path: reports/checkov
         continue-on-error: true
 
       - name: Upload Checkov Results
-        uses: github/codeql-action/upload-sarif@v2
-        if: always()
+        uses: github/codeql-action/upload-sarif@v4
+        if: always() && hashFiles('reports/checkov.sarif') != ''
         with:
-          sarif_file: reports/checkov.sarif
+          sarif_file: 'reports/checkov.sarif'
+          category: 'Checkov'
 
   # Stage 3: Native Tests
   test:
