Add workflow permissions for CodeQL Action API access
- Add 'permissions' block with 'security-events: write'
- Allows SARIF upload to GitHub Code Scanning
- Fixes 'Resource not accessible by integration' error
- Required for CodeQL Action to access API endpoints

Fixes GitHub Actions error from line 45 of workflow run

--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -24,6 +24,10 @@ env:
   TF_VERSION: "1.6.4"
   TFLINT_VERSION: "0.61.0"
 
+permissions:
+  contents: read
+  security-events: write
+
 jobs:
   # Stage 1: Validate & Lint
   validate:
